# verification-bot

./: .gitmodules  README.md
function/: Cargo.toml
function/src/: context.rs  error.rs  main.rs  verification.rs
function/src/autocomplete/: context.rs  mod.rs
function/src/commands/: mod.rs
function/src/commands/logging/: mod.rs
function/src/commands/utility/: mod.rs  ping.rs
function/src/commands/verification/: mod.rs
